[package]
name = "oskd"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.17"
http = "1.1.0"
rdev = { version = "0.5.3", features = ["serialize"] }
serde_json = "1.0.132"
socketio-server = { path = "./libs/socketio-server" }
tokio = { version = "1.41.1", features = ["full"] }
